third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/table/llbrace.stderr
TOML parse error at line 1, column 3
  |
1 | [ [table]]
  |   ^
invalid key
